--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "cypress:headless": "cypress run",
+    "e2e:headless": "start-server-and-test start http://localhost:3000 cypress:headless"
   },
   "dependencies": {
     "framer-motion": "^6.3.1",
     "next": "12.1.5",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "sharp": "^0.30.4"
   },
   "devDependencies": {
     "@babel/core": "^7.17.9",
@@ -20,9 +23,11 @@
     "@types/react": "18.0.6",
     "@types/react-dom": "18.0.2",
     "autoprefixer": "^10.4.4",
+    "cypress": "^9.6.0",
     "eslint": "8.13.0",
     "eslint-config-next": "12.1.5",
     "postcss": "^8.4.12",
+    "start-server-and-test": "^1.14.0",
     "tailwindcss": "^3.0.24",
     "typescript": "4.6.3"
   }
